--- a/themes/theme-modules/ios7/components/topcoat-icon-button.styl
+++ b/themes/theme-modules/ios7/components/topcoat-icon-button.styl
@@ -67,9 +67,6 @@
 .topcoat-icon-button--quiet:focus
     @extend .topcoat-icon-button:focus
 
-.topcoat-icon-button--quiet:hover:focus
-    @extend .topcoat-icon-button:focus
-
 .topcoat-icon
     inline-block()
     overflow var-overflow
